Apply trade role to getTrades result